[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen-amazing"
version = "1.0.0"
description = "Reusable maze generator module for the 42 a-maze-ing project"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "etoktona" },
  { name = "ckruk" }
]
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
py-modules = ["mazegen"]
packages = ["maze_files"]
